force-app/main/default/objects/Partners_Form_Template__c/Partners_Form_Template__c.object-meta.xml
<CustomObject>
    <description>NICC-024156</description>
    <label>Partners Form Template</label>
    <nameField>
        <displayFormat>PFT{0000}</displayFormat>
        <label>Partners Form Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partners Form Templates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>