force-app/main/default/objects/Partners_Form_Template__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>NICC-024156</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>