force-app/main/default/objects/Partners_Form_Template__c/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <description>NICC-024156</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Terms</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>